--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+arabic-reshaper==2.1.3
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
 Django==4.0
 djangorestframework==3.13.1
+future==0.18.2
 gunicorn==20.1.0
+html5lib==1.1
 Pillow==8.4.0
+PyPDF2==1.26.0
+python-bidi==0.4.2
 python-decouple==3.5
 pytz==2021.3
+reportlab==3.6.3
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
+webencodings==0.5.1
+xhtml2pdf==0.2.5
