--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 arabic-reshaper==2.1.3
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==4.0
+django-heroku==0.3.1
 djangorestframework==3.13.1
 future==0.18.2
 gunicorn==20.1.0
 html5lib==1.1
 Pillow==8.4.0
+psycopg2==2.9.3
 PyPDF2==1.26.0
 python-bidi==0.4.2
 python-decouple==3.5
@@ -16,4 +19,5 @@ six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
 webencodings==0.5.1
+whitenoise==5.3.0
 xhtml2pdf==0.2.5
