--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,19 @@ arabic-reshaper==2.1.3
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==4.0
+django-cors-headers==3.11.0
 django-heroku==0.3.1
 djangorestframework==3.13.1
 future==0.18.2
 gunicorn==20.1.0
 html5lib==1.1
+importlib-metadata==4.10.1
+Markdown==3.3.6
 Pillow==8.4.0
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 PyPDF2==1.26.0
 python-bidi==0.4.2
 python-decouple==3.5
@@ -17,7 +22,9 @@ pytz==2021.3
 reportlab==3.6.3
 six==1.16.0
 sqlparse==0.4.2
+static3==0.7.0
 tzdata==2021.5
 webencodings==0.5.1
 whitenoise==5.3.0
 xhtml2pdf==0.2.5
+zipp==3.7.0
